@@ -142,8 +142,20 @@ public class EncodingServer
 	 */
 	public static boolean hasEncoding(String name)
 	{
-		return Charset.isSupported(name)
-			|| Arrays.asList(ServiceManager.getServiceNames(serviceClass)).contains(name);
+		try
+		{
+			if (Charset.isSupported(name))
+			{
+				return true;
+			}
+		}
+		catch (IllegalCharsetNameException e)
+		{
+			// The name is illegal for java.nio.charset.Charset.
+			// But it may be legal for service name.
+		}
+
+		return Arrays.asList(ServiceManager.getServiceNames(serviceClass)).contains(name);
 	} //}}}
 
 	//{{{ Private members
